		been simplified considerably and made easier to use.  The
		old methods have been made private and final to prevent
		accidental overriding (which would be a bug).  The basic
		newIndividual from scratch now has a thread parameter and
		so can be used in a multithreaded environment.
	Moved in new FloatVectorSpecies and IntegerVectorSpecies, which now
		allow gene min/max to be specified not only globally, and
		by individual gene, but also by gene region.  The new setup
		methods are more complex mostly because they do lots of
		careful checking.  Thanks to Rafal Kicinger.
	javac has grown up and jikes has fallen into disrepair.  We move
		ECJ's default compiler to javac -target 1.3 -source 1.3
	NOT BACKWARD COMPATIBLE.  GPNode's clone() method will be a deep
		clone call, like everything else.  We've changed all the
		calls to clone() to instead call lightClone() (we hope!)
		and have added an error message to clone() for the time
		being to warn people to use either lightClone() or
		cloneReplacing() instead.  Later on we'll set clone()
		to just call cloneReplacing().
	Added methods for reading and writing populations and subpopulations
		to streams and logs.
	Modifications to SPEA2Subpopulation to read and write the archive size
		when writing subpopulations
	Added T_INTEGER and T_CHARACTER to Code
	Added several methods to Code to simplify reading from files.  Modified
		much existing code to use the Code methods instead of 
		rolling their own.  One unfortunate affect of this is that Code
		now longer is independent of EvolutionState.  Perhaps we might
		make a utility class instead.
	Moved ec/multiobjective/spea/package.html to a README file
	Subpopulations now initialize via loading from files using the new
		file loading code.
	Updates to MersenneTwister and MersenneTwisterFast
	Small setup() fix to VectorSpecies -- wasn't looking up default 
		parameter for crossover type.  Thanks to Michael Orlov
		<orlovm@cs.bgu.ac.il>
	Added indent to make dist