@@ -322,6 +322,14 @@ public class ByteVectorIndividual extends VectorIndividual
             }
         }
                 
+    public void setGenomeLength(int len)
+	{
+	byte[] newGenome = new byte[len];
+	System.arraycopy(genome, 0, newGenome, len, 
+	    genome.length < newGenome.length ? genome.length : newGenome.length);
+	genome = newGenome;
+	}
+
     /** Returns true if each gene value is within is specified [min,max] range. */
     public boolean isInRange() 
         {
