@@ -430,6 +430,14 @@ public class DoubleVectorIndividual extends VectorIndividual
             }
         }
                 
+    public void setGenomeLength(int len)
+	{
+	double[] newGenome = new double[len];
+	System.arraycopy(genome, 0, newGenome, len, 
+	    genome.length < newGenome.length ? genome.length : newGenome.length);
+	genome = newGenome;
+	}
+
     /** Returns true if each gene value is within is specified [min,max] range.
         NaN is presently considered in range but the behavior of this method
         should be assumed to be unspecified on encountering NaN. */
