@@ -290,6 +290,17 @@ public class GeneVectorIndividual extends VectorIndividual
             genome[x].writeGene(state,dataOutput);
         }
 
+    public void setGenomeLength(int len)
+	{
+        GeneVectorSpecies s = (GeneVectorSpecies) species;
+	VectorGene[] newGenome = new VectorGene[len];
+	System.arraycopy(genome, 0, newGenome, len, 
+	    genome.length < newGenome.length ? genome.length : newGenome.length);
+	for(int x=genome.length; x< newGenome.length; x++)
+	    if (genome[x]==null) genome[x] = (VectorGene)(s.genePrototype.clone());  // not reset
+	genome = newGenome;
+	}
+
     public void readGenotype(final EvolutionState state,
                              final DataInput dataInput) throws IOException
         {
