@@ -336,6 +336,14 @@ public class IntegerVectorIndividual extends VectorIndividual
             }
         }
                 
+    public void setGenomeLength(int len)
+	{
+	int[] newGenome = new int[len];
+	System.arraycopy(genome, 0, newGenome, len, 
+	    genome.length < newGenome.length ? genome.length : newGenome.length);
+	genome = newGenome;
+	}
+
     /** Returns true if each gene value is within is specified [min,max] range. */
     public boolean isInRange() 
         {
